--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,103 @@
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-cmake==3.26.0
-filelock==3.10.0
-huggingface-hub==0.13.2
-idna==3.4
-Jinja2==3.1.2
-joblib==1.2.0
-lit==15.0.7
-llvmlite==0.40.1
-MarkupSafe==2.1.2
-mpmath==1.3.0
-networkx==3.0
-nltk==3.8.1
-numba==0.57.1
-numpy==1.24.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-packaging==23.0
-pandas==1.5.3
-Pillow==9.4.0
-plotly==5.15.0
-pynndescent==0.5.10
-python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==6.0
-regex==2022.10.31
-requests==2.28.2
-scikit-learn==1.2.2
-scipy==1.10.1
-sentence-transformers==2.2.2
-sentencepiece==0.1.97
+annotated-types==0.7.0
+anyio==4.9.0
+apturl==0.5.2
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+blinker==1.4
+Brlapi==0.8.3
+certifi==2020.6.20
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+conan==2.6.0
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+duplicity==0.8.21
+evdev==1.4.0
+exceptiongroup==1.3.0
+fastapi==0.115.12
+fasteners==0.19
+future==0.18.2
+gyp==0.1
+h11==0.16.0
+html5lib==1.1
+httplib2==0.20.2
+httptools==0.6.4
+idna==3.3
+importlib-metadata==4.6.4
+iotop==0.6
+jeepney==0.7.1
+Jinja2==3.1.4
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+paramiko==2.9.3
+patch-ng==1.17.4
+pexpect==4.8.0
+Pillow==9.0.1
+protobuf==3.12.4
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycups==2.0.1
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.1.0
+python-magic==0.4.24
+pytz==2022.1
+pyxdg==0.27
+PyYAML==6.0.2
+reportlab==3.6.8
+requests==2.25.1
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+setproctitle==1.2.2
 six==1.16.0
-sympy==1.11.1
-tenacity==8.2.2
-threadpoolctl==3.1.0
-tokenizers==0.13.2
-torch==2.0.0
-torchvision==0.15.1
-tqdm==4.65.0
-transformers==4.27.1
-triton==2.0.0
-typing_extensions==4.5.0
-umap-learn==0.5.3
-urllib3==1.26.15
+sniffio==1.3.1
+soupsieve==2.3.1
+starlette==0.46.2
+systemd-python==234
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.19
+usb-creator==0.3.7
+uvicorn==0.34.2
+uvloop==0.21.0
+wadllib==1.3.6
+watchfiles==1.0.5
+webencodings==0.5.1
+websockets==15.0.1
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
